syntax = "proto3";

package kv_store;

service KvStore {
  rpc Example (ExampleRequest) returns (ExampleReply) {}

  // TODO: Protocol buffers
  //
  // Function to insert a key value pair into the server
  rpc InsertKeyValuePair(InsertKeyValueRequest) returns (InsertKeyResponse){}

  // function that gets key and returns value
  // TODO : convert to stream and try
  rpc GetValueFromKey(RetrieveValueRequest) returns (RetireveValueResponse){}
}

message ExampleRequest {
  uint32 input = 1;
}

message ExampleReply {
  uint32 output = 1;
}

// TODO: Protocol buffers

message InsertKeyValueRequest {
    string key = 1;
    string value = 2;
}

message InsertKeyResponse {
    uint32 status = 1;
}

message RetrieveValueRequest {
    string key = 1;
}

message RetireveValueResponse {
    string value = 1;
}
